Add improved template (to be tested on LD37)

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 *.obj
 *.elf
 
+# Dependency rules
+*.d
+
 # Precompiled Headers
 *.gch
 *.pch
@@ -37,6 +40,7 @@ bin/*
 *.ase
 *.wav
 *.gif
+promo/*
 
 # Log files
 *.log
